  * Improved Array#rotate! performance. 40 times faster.
  * Improved iterators performance (ex Array#{each, map}). 2-3 times faster.
  * Fixed a bug where Array#rotate! causes a crash in REPL.
  * Fixed a bug where the objects created by "CFxxxCreate(args)" are not
    released.
  * Fixed a bug in dispatcher where #super cannot look up the shortcut method.
    (ie #foo=)
  * [iOS] Fixed a bug where `rake device' would no longer print the application
    logs from the device.
  * [OSX] Fixed a bug on OSX platform where compiler flags for iOS are passed
    when it generates bridgesupport file for vendor library.
  * [OSX] Add bridgesupport metadata for Carbon frameworks.
  * [OSX] Add bridgesupport metadata for OSServices framework.

= RubyMotion 2.14 =

  * Really fix the inline function problem described in the previous update.

= RubyMotion 2.13 =

  * Fixed a bug where the methods which are defined as inline functions in
    iOS/OSX framework are not working properly.
  * Fixed a bug where using the mouse-over functionality in the REPL would
    lead to an internal deadlock and hang the process.
  * Fixed a bug in the REPL where the result of evaluated expressions could be
    prematurely released before being sent back to the command-line.
  * [iOS] Work around an issue where Instruments.app wants an integer
    UIDeviceFamily value and App Launcher wants a string.
  * [iOS] Fixed a big where the running the REPL in 64-bit mode would result
    in an error related to the fact that the REPL library was i386-only.

= RubyMotion 2.12 =

  * Added support for OS X Mavericks (10.9). The toolchain is now fully usable
    on a Mavericks machine and can also be used to create Mavericks OS X apps.
  * Added `profile' rake tasks that launch builds through Instruments.app for
    iOS (both simulator and device) and OS X applications. Run a `rake clean'
    before using the task on an existing project.