@@ -18,6 +18,7 @@
     released.
   * Fixed a bug in dispatcher where #super cannot look up the shortcut method.
     (ie #foo=)
+  * Raise error if cleaning a build artefact fails.
   * [iOS] Fixed a bug where `rake device' would no longer print the application
     logs from the device.
   * [OSX] Fixed a bug on OSX platform where compiler flags for iOS are passed
